fix(arc-1763): set width for textbox 2 columns on mobile
https://meemoo.atlassian.net/browse/ARC-1763

--- a/src/styles/admin-core/content-blocks/_content-block-two-columns.scss
+++ b/src/styles/admin-core/content-blocks/_content-block-two-columns.scss
@@ -12,7 +12,7 @@ $component: "c-content-block__rich-text-two-columns";
 		grid-gap: $spacer-1xl;
 
 		.o-grid-col-bp2-6 {
-			width: 100% !important;
+			width: calc(100% - 40px) !important;
 		}
 	}
 
